# bevy-spaceship-learn

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
apps/spaceship/: Cargo.toml
apps/spaceship/src/: main.rs
apps/tests/: Cargo.toml
apps/tests/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: entity.rs  lib.rs
crates/core/src/entity/: collision.rs  emitter.rs  enemy.rs  projectile.rs
crates/core/src/entity/enemy/: lifecycle.rs  pool.rs
crates/core/src/entity/projectile/: main.rs  movement.rs  path_pattern.rs
crates/core/src/entity/projectile/path_pattern/: linear.rs  sine_wave.rs  spiral.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
