[workspace]
members = [
    "apps/spaceship",
    "apps/tests",
    "crates/core",
    "crates/input",
    "crates/render",
    "crates/ui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bevy = { version = "0.19.0", default-features = false, features = ["2d", "ui"] }
bevy_egui = "0.40.0"
spaceship-core = { path = "crates/core" }
spaceship-input = { path = "crates/input" }
spaceship-render = { path = "crates/render" }
spaceship-ui = { path = "crates/ui" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
